alertify fix on mobile

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -108,7 +108,7 @@
 
             > * {
                 width: 30%;
-                min-width: 500px;
+                min-width: 450px;
                 max-width: 95%;
                 margin: 0 auto;
                 text-align: left;
